Improve mock data quality in unit tests to prevent random stacktraces